--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,8 @@
 {
   "name": "server",
   "packageManager": "yarn@3.8.6",
+  "version": "0.0.0",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "nodemon --watch . --exec \"node index.js\"",
