feat: Implement room-based security for the stream
This commit introduces a room-based security system to the stream image viewer.

Key changes:
- Added a new context menu to generate a unique room ID and display a secret URL.
- The overlay now connects to a specific WebSocket room based on the room ID in the URL.
- The server now manages WebSocket connections in rooms, ensuring that images are only broadcast to the intended room.
- The extension's background script has been updated to handle the new context menu and send the room ID with each image.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"yarn dev:overlay\" \"yarn dev:server\"",
     "dev:overlay": "yarn workspace overlay dev",
     "dev:server": "yarn workspace server dev"
   },
@@ -14,6 +13,9 @@
     "./server"
   ],
   "devDependencies": {
-    "concurrently": "^9.2.1"
+    "typescript": "^5.9.3"
+  },
+  "resolutions": {
+    "typescript": "^5.9.3"
   }
 }
