--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Stream Image Sender",
   "version": "1.0",
-  "permissions": ["contextMenus", "scripting", "storage", "notifications"],
+  "permissions": ["contextMenus", "scripting", "storage"],
   "background": {
     "service_worker": "background.js"
   },
