--- a/extension/package.json
+++ b/extension/package.json
@@ -6,10 +6,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite build --watch --mode development",
-    "build": "vue-tsc -b && vite build",
+    "build": "vue-tsc -b && vite build && node build-zip.js",
     "preview": "vite preview"
   },
   "dependencies": {
+    "archiver": "^7.0.1",
     "vue": "^3.5.24"
   },
   "devDependencies": {
