--- a/overlay/package.json
+++ b/overlay/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "vue-tweet": "^2.3.3"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.17",
