--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Live Image",
   "version": "1.0",
-  "permissions": ["contextMenus", "scripting", "storage", "https://x.com"],
+  "permissions": ["contextMenus", "scripting", "storage"],
   "background": {
     "service_worker": "background.js"
   },
@@ -16,5 +16,12 @@
       "run_at": "document_end"
     }
   ],
-  "host_permissions": ["https://x.com/*"]
+  "host_permissions": ["https://x.com/*"],
+  "icons": {
+    "16": "icons/logo-16.png",
+    "32": "icons/logo-32.png",
+    "34": "icons/logo-34.png",
+    "48": "icons/logo-48.png",
+    "128": "icons/logo-128.png"
+  }
 }
