--- a/extension/tsconfig.app.json
+++ b/extension/tsconfig.app.json
@@ -2,7 +2,7 @@
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    "types": ["vite/client", "chrome"],
+    "types": ["vite/client", "chrome", "node"],
 
     /* Linting */
     "strict": true,
