--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "mongoose": "^9.1.1",
     "morgan": "^1.10.1",
     "ws": "^8.18.3"
   },
